# hair_care

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  app.py  cloudbuild.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
backend/: Dockerfile  api.py  pyproject.toml
backend/src/hair_classification/: hair_type_classification.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: About.js  About.tsx  AboutAr.js  Chat.js  ChatAr.js  HairAdvice.js  HairAdviceAr.js  Home.tsx  HomeAr.tsx  ProductAnalysis.js  ProductAnalysisAr.js  accordion.tsx
src/hair_classification/: hair_type_classification.py
